<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linuxgodmode.com.linuxgodmode.MainActivity"
    android:background="#eeb2c1cc">

    <EditText
        android:id="@+id/in_ip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_input_ip"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/in_port"
        android:layout_marginEnd="4dp"
        app:layout_constraintRight_toRightOf="@+id/in_user"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/in_port" />

    <EditText
        android:id="@+id/in_port"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_input_port"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/in_user"
        android:layout_marginTop="27dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_ip"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_text_port"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="89dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_text_username"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginTop="65dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/in_user"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_input_username"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginTop="17dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/in_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:hint="@string/login_input_password"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_password"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveVar"
        android:background="#ee35b635"
        android:text="@string/login_button_start"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bn_stop"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="27dp"
        android:onClick="disconnect"
        android:text="@string/login_button_cancel"
        android:background="#edcc2e2e"
        app:layout_constraintRight_toRightOf="@+id/in_pw"
        app:layout_constraintTop_toBottomOf="@+id/in_pw"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="9dp" />

    <Button
        android:id="@+id/button_terminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bn_terminal"
        android:layout_marginStart="16dp"
        android:textColor="#fff"
        android:background="#000"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_statistics"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bn_statistics"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="73dp"
        app:layout_constraintLeft_toRightOf="@+id/button_terminal"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button_functions"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:layout_marginRight="16dp"
        android:text="Funktionen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/connectedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="disconnected"
        android:background="#000"
        android:textColor="#fff"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="31dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="117dp"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
